--- a/src/modules/Invite/style.less
+++ b/src/modules/Invite/style.less
@@ -1,5 +1,15 @@
 @import '../../css/variable.less';
 
+.module-invite {
+    .app-header {
+        margin-bottom: 15px;
+    }
+
+    .app-container {
+        width: calc(100% - 30px);
+    }
+}
+
 .invite-form {
     display: flex;
     flex-direction: column;
