--- a/src/modules/Room/style.less
+++ b/src/modules/Room/style.less
@@ -1,5 +1,18 @@
 @import '../../css/variable.less';
 
+.module-room {
+    .app-header {
+        margin-bottom: 15px;
+    }
+}
+
+.module-room,
+.nft-drawer {
+    .app-container {
+        width: calc(100% - 30px);
+    }
+}
+
 .room-container {
     display: flex;
     flex-direction: column;
