--- a/src/components/ModuleContainer/style.less
+++ b/src/components/ModuleContainer/style.less
@@ -4,6 +4,7 @@
     display: flex;
     width: 100%;
     height: 100%;
+    justify-content: center;
 
     .app-title {
         font-family: 'Stretch';
