从接口获取room数据

--- a/src/modules/Room/style.less
+++ b/src/modules/Room/style.less
@@ -1,12 +1,12 @@
 @import '../../css/variable.less';
 
-.module-room {
+.page-body[class*='module-room'] {
     .app-header {
         margin-bottom: 15px;
     }
 }
 
-.module-room,
+.page-body[class*='module-room'],
 .nft-drawer {
     .app-container {
         width: calc(100% - 30px);
