--- a/src/modules/Room/style.less
+++ b/src/modules/Room/style.less
@@ -60,8 +60,9 @@
     }
 
     .room-name {
-        font-size: 23px;
+        height: 33px;
         line-height: 33px;
+        font-size: 23px;
         font-weight: 600;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -69,8 +70,9 @@
     }
 
     .room-description {
-        font-size: 16px;
+        height: 21px;
         line-height: 21px;
+        font-size: 16px;
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
