--- a/src/components/AppCarousel/style.less
+++ b/src/components/AppCarousel/style.less
@@ -7,12 +7,20 @@
         width: 100%;
     }
 
-    .slick-dots  {
+    .slick-dots {
         padding: 10px 0 0;
         position: relative;
     }
 
     .slick-dots-bottom {
         bottom: 0;
+    }
+
+    .ant-carousel {
+        .slick-list {
+            .slick-slide {
+                pointer-events: auto;
+            }
+        }
     }
 }
