添加购买按钮

--- a/src/modules/Room/Nft/style.less
+++ b/src/modules/Room/Nft/style.less
@@ -14,6 +14,12 @@
         font-size: 23px;
     }
 
+    .btn-buy {
+        position: absolute;
+        top: 63px;
+        right: 26px;
+    }
+
     .nft-container-box {
         display: flex;
         width: 100%;
