邀请用户支持手动输入

--- a/src/modules/Invite/style.less
+++ b/src/modules/Invite/style.less
@@ -29,6 +29,28 @@
     .ant-checkbox-wrapper {
         color: @bg-color;
     }
+
+    .dynamic-delete-button {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        width: 32px;
+        height: 32px;
+        vertical-align: top;
+
+        svg {
+            width: 60%;
+            height: 60%;
+        }
+
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+
+    .ant-row {
+        margin-bottom: 12px;
+    }
 }
 
 .invite-list {
