--- a/src/modules/Invite/style.less
+++ b/src/modules/Invite/style.less
@@ -1,6 +1,6 @@
 @import '../../css/variable.less';
 
-.module-invite {
+.page-body[class*='module-invite'] {
     .app-header {
         margin-bottom: 15px;
     }
