--- a/src/modules/Room/Nft/style.less
+++ b/src/modules/Room/Nft/style.less
@@ -18,6 +18,9 @@
         position: absolute;
         top: 63px;
         right: 26px;
+        font-size: 24px;
+        height: 52px;
+        border-radius: 26px;
     }
 
     .nft-container-box {
