--- a/public/color.less
+++ b/public/color.less
@@ -14,4 +14,6 @@
 .app-form-switch .app-switch-inner .off{background:@theme-color}
 .app-form-switch :checked+.app-switch-inner .on{background:@theme-color}
 .app-form-switch :checked+.app-switch-inner .off{color:@theme-color}
+.person-card .card-avatar>div{background-color:@theme-color}
+.person-card .card-info .person-address{color:@theme-color}
 .room-container .room-address{color:@theme-color}
