--- a/src/app.less
+++ b/src/app.less
@@ -43,7 +43,7 @@
 }
 
 @font-face {
-    font-family: 'Stretch';
+    font-family: 'StretchProRegular';
     src: url('./assets/fonts/Stretch/StretchPro.otf');
 }
 
