--- a/src/components/ModuleContainer/style.less
+++ b/src/components/ModuleContainer/style.less
@@ -7,7 +7,7 @@
     justify-content: center;
 
     .app-title {
-        font-family: 'Stretch';
+        font-family: 'StretchProRegular';
         display: flex;
         justify-content: center;
         width: 142px;
