Landing页地址及样式修改

--- a/src/modules/Landing/PersonCard/style.less
+++ b/src/modules/Landing/PersonCard/style.less
@@ -66,17 +66,19 @@
         .person-info {
             width: 60%;
             height: 100%;
+            padding-right: 5px;
         }
 
         .person-name {
             font-size: 16px;
             font-family: 'StretchProRegular';
             line-height: 19px;
+            word-break: break-word;
         }
 
         .person-address {
             display: flex;
-            width: calc(100% - 24px);
+            width: calc(100% - 17px);
             overflow: hidden;
             justify-content: center;
             align-items: center;
@@ -98,6 +100,7 @@
         .person-description {
             font-size: 12px;
             line-height: 14px;
+            word-break: break-word;
         }
 
         .person-follow {
