--- a/src/modules/Room/Nft/style.less
+++ b/src/modules/Room/Nft/style.less
@@ -35,7 +35,7 @@
         &-container {
             width: 100%;
             border-radius: 21px;
-            border: 1px solid @bg-color;
+            border: 1px solid rgba(@bg-color, 0.2);
             overflow: hidden;
 
             img {
