Room 默认头像修改

--- a/src/modules/Room/style.less
+++ b/src/modules/Room/style.less
@@ -50,6 +50,7 @@
         background-position: center center;
         background-repeat: no-repeat;
         vertical-align: top;
+        background-image: url('../../assets/avatar-default.png');
     }
     .room-info {
         display: inline-block;
@@ -114,7 +115,8 @@
 
     .data-empty {
         font-size: 50px;
-        color: rgba(@font-color, 0.1)
+        color: rgba(@font-color, 0.1);
+        user-select: none;
     }
 }
 
