--- a/src/app.less
+++ b/src/app.less
@@ -169,3 +169,7 @@ img {
         border-top-right-radius: @box-radius;
     }
 }
+
+.avatar-default {
+    background-image: url('./assets/avatar-default.png');
+}
