--- a/src/components/ModuleContainer/style.less
+++ b/src/components/ModuleContainer/style.less
@@ -10,7 +10,8 @@
         font-family: 'StretchProRegular';
         display: flex;
         justify-content: center;
-        width: 142px;
+        align-items: center;
+        width: 242px;
         line-height: 142px;
         font-weight: 800;
         color: #fcfcfd;
