--- a/src/modules/Landing/PersonCard/style.less
+++ b/src/modules/Landing/PersonCard/style.less
@@ -36,7 +36,7 @@
         border-top-left-radius: @person-card-radius;
         border-top-right-radius: @person-card-radius;
 
-        & > div {
+        & > .avatar {
             position: absolute;
             top: 0;
             left: 0;
@@ -48,7 +48,6 @@
             border: 1px solid @bg-color;
             border-radius: @person-card-radius;
             background-color: @theme-color;
-            background-image: url('../../../assets/avatar-default.png');
         }
     }
 
