--- a/public/color.less
+++ b/public/color.less
@@ -5,6 +5,8 @@
 @font-color: #000000;
 @header-height: 78px;
 @placeholder-color: rgba(0, 0, 0, 0.4);
+@font-second-color: rgba(#000000, 0.4) @header-height: 78px;
+@font-second-color: rgba(#000000, 0.4);
 .btn-trans{color:@theme-color}
 .btn-trans:focus,.btn-trans:hover{color:@theme-color}
 .ant-btn-primary{color:@theme-color}
