--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -3,5 +3,6 @@
 @box-radius-lg: 70px;
 @box-radius: 50px;
 @font-color: #000000;
+@font-second-color: rgba(#000000, 0.4);
 @header-height: 78px;
 @placeholder-color: rgba(0, 0, 0, 0.4);
