--- a/src/modules/Invite/style.less
+++ b/src/modules/Invite/style.less
@@ -14,6 +14,29 @@
     &-body {
         flex: 1;
         padding: 30px 64px 0;
+        position: relative;
+
+        .powered-by {
+            position: absolute;
+            top: 40px;
+            right: 40px;
+            font-size: 12px;
+            color: @font-color;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            & > * {
+                margin-bottom: 15px;
+            }
+
+            .knn3-logo {
+                width: 180px;
+            }
+            .rss3-logo {
+                width: 180px;
+            }
+        }
     }
 
     &-footer {
