reward logic added

--- a/src/modules/Room/style.less
+++ b/src/modules/Room/style.less
@@ -13,6 +13,21 @@
     }
 }
 
+.add-reward-wrapper{
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    margin-right: 12px;
+    .add-reward-input{
+        background: none;
+        border: 1px solid #000;
+        padding: 8px 12px;
+        border-radius: 100px;
+        outline: none;
+        
+    }
+}
+
 .room-container {
     display: flex;
     flex-direction: column;
