--- a/src/modules/Room/style.less
+++ b/src/modules/Room/style.less
@@ -106,6 +106,16 @@
         line-height: 26px;
         margin: 15px 0;
     }
+    .room-badge {
+        // height: 20px;
+        // line-height: 25px;
+        // font-size: 17px;
+        font-weight: 200;
+        color: black;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
 
     .switch-room-type {
         margin-top: 15px;
