nft列表居中显示

--- a/src/modules/Room/List/style.less
+++ b/src/modules/Room/List/style.less
@@ -1,9 +1,8 @@
 .nft-list {
-    width: 100%;
 
     .nft-show-item {
         display: inline-block;
-        width: 20%;
+        width: calc(20vw - 6px);
         margin-bottom: 39px;
 
         .show-card {
