--- a/src/app.less
+++ b/src/app.less
@@ -153,6 +153,10 @@ img {
 }
 
 .ant-btn {
+    border-radius: 16px;
+    padding-left: 20px;
+    padding-right: 20px;
+
     &-lg {
         border-radius: 20px;
         padding-left: 30px;
