--- a/src/modules/Room/style.less
+++ b/src/modules/Room/style.less
@@ -21,7 +21,7 @@
     .add-reward-input{
         background: none;
         border: 1px solid #000;
-        padding: 8px 12px;
+        padding: 7px 12px;
         border-radius: 100px;
         outline: none;
         
@@ -100,11 +100,11 @@
         display: inline-block;
         padding: 0 25px;
         background: @bg-color;
-        border-radius: 13px;
+        border-radius: 16px;
         color: @theme-color;
-        height: 26px;
-        line-height: 26px;
-        margin: 15px 0;
+        height: 32px;
+        line-height: 32px;
+        margin: 0 10px 0 0;
     }
     .room-badge {
         // height: 20px;
@@ -126,10 +126,15 @@
         align-items: center;
         width: 100%;
         height: 47px;
+        margin-top: 10px;
 
         .room-avatar-list {
             flex: 1;
             overflow: hidden;
+
+            .ant-avatar-group {
+                float: right;
+            }
         }
     }
 
