added copy text function

--- a/src/modules/Room/style.less
+++ b/src/modules/Room/style.less
@@ -13,6 +13,17 @@
     }
 }
 
+
+.distributor-line{
+    display: flex;
+    align-items: center;
+}
+.copy-icon{
+    vertical-align: middle;
+    cursor: pointer;
+    margin-left: 4px;
+}
+
 .add-reward-wrapper{
     display: flex;
     gap: 8px;
